# introduction-sql

./: README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
data/: customers.csv  orders.csv  products.csv
sql/: create_db.sql  create_orders_combined.sql  create_relational_db.sql  placeholder.sql
src/: config.py  connection.py  crud.py  main.py  mysql_db.py  read_file_write_db.py  table.py  utils.py
tests/: test_crud.py
tests/integration/: test_integration.py
tests/unit/: test_crud.py  test_table.py
